# DiPH

./: LICENSE.md  README.md  bot2.py  helpers.py  plugins.py  pyproject.toml  requirements.txt  weather.py
diph/: __init__.py
diph/config/: __init__.py  wizard.py
